# quantum_mechanics

./: README.md
aqft/: Algebraic Quantum Field Theory Review.txt  Designing AQFT Lectures_ Curved Spacetime.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Chris J. Fewster.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Daniele Guido.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by David E. Evans.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Gandalf Lechner.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Jakob Yngvason.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by John E. Roberts.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Klaus Fredenhagen.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Rainer Verch.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Robert M. Wald.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Roberto Longo.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Romeo Brunetti.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Rudolf Haag.txt  NoteGPT_TRANSCRIPT_Algebraic Quantum Field Theory  Talk by Sergio Doplicher.txt  course_plan.txt  lecture_haag.tex  (+18 more)
quantum_ising/: LICENSE  README.md  code_for_page_curve_quantum_ising_paper (2).py  pyproject.toml  requirements.txt
quantum_ising/scripts/: generate_data.py  plot_results.py
quantum_ising/src/quantum_ising_model/: __init__.py  config.py  ops.py  simulation.py
quantum_ising/tests/: test_ops.py  test_simulation.py
(+309 files in other folders)
